[gd_scene load_steps=9 format=3 uid="uid://cdmjeh55j5hmx"]

[ext_resource type="Texture2D" uid="uid://c32qe801ka5ug" path="res://assets/OrePiles.png" id="1_0m2uo"]
[ext_resource type="Script" path="res://SupportScripts/ore_pile.gd" id="1_x7vmn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r6omw"]
radius = 11.0
height = 56.0

[sub_resource type="AtlasTexture" id="AtlasTexture_51wfu"]
atlas = ExtResource("1_0m2uo")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2pvt"]
atlas = ExtResource("1_0m2uo")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fidh0"]
atlas = ExtResource("1_0m2uo")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qj86k"]
atlas = ExtResource("1_0m2uo")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_8pkas"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_51wfu")
}],
"loop": true,
"name": &"COAL",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2pvt")
}],
"loop": true,
"name": &"COPPER",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fidh0")
}],
"loop": true,
"name": &"IRON",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qj86k")
}],
"loop": true,
"name": &"MAGNESIUM",
"speed": 5.0
}]

[node name="OrePile" type="Area2D"]
script = ExtResource("1_x7vmn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -11)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_r6omw")

[node name="PileShape" type="AnimatedSprite2D" parent="."]
position = Vector2(3, -32)
sprite_frames = SubResource("SpriteFrames_8pkas")
animation = &"MAGNESIUM"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
